--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_order_tab_overdue.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_order_tab_overdue.xml
@@ -7,13 +7,31 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-
-    <android.support.v7.widget.RecyclerView
+    <com.citiexchangeplatform.pointsleague.EmptyRecyclerView
         android:id="@+id/recyclerView_myOrder_overdue"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        />
 
-    </android.support.v7.widget.RecyclerView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <!--Empty提示图-->
+        <TextView
+            android:id="@+id/empty_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="这里还没有优惠券"/>
+    </LinearLayout>
+
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recyclerView_myOrder_overdue"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--&gt;-->
+
+    <!--</android.support.v7.widget.RecyclerView>-->
 
 </LinearLayout>
