--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_expandlist.xml
@@ -57,15 +57,33 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp">
-        <android.support.v7.widget.RecyclerView
+        <com.citiexchangeplatform.pointsleague.EmptyRecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_height="match_parent"
+            />
 
-            >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="105dp"
+            android:gravity="center">
+            <!--Empty提示图-->
+            <TextView
+                android:id="@+id/empty_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="暂无兑换记录"/>
+        </LinearLayout>
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/recyclerView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="10dp"-->
 
-        </android.support.v7.widget.RecyclerView>
+            <!--&gt;-->
+
+        <!--</android.support.v7.widget.RecyclerView>-->
 
     </android.support.v7.widget.CardView>
 
