--- a/Backstage/citiMerchant/src/main/webapp/statics/css/login/login.css
+++ b/Backstage/citiMerchant/src/main/webapp/statics/css/login/login.css
@@ -15,10 +15,24 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
-    background-color:#fff;
+    /*background-color:#fff;
     filter:Alpha(Opacity=60);
-    opacity:0.6;
+    opacity:0.6;*/
 }
+
+#moban::before{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: block;
+    content: "";
+    background-color:rgba(0,0,0,0.3);
+    /*filter:Alpha(Opacity=60);*/
+    /*opacity:0.6;*/
+}
+
 .page-container {
     margin: 200px auto 0 auto;
     display: flex;
@@ -29,7 +43,7 @@ body {
     width: 400px;
     padding-bottom: 50px;
     border-radius: 5px;
-    background-color: rgb(0, 0, 0);
+    background-color: #23262E;
 }
 
 h1 {
@@ -37,7 +51,7 @@ h1 {
     font-size: 30px;
     font-weight: 700;
     text-shadow: 0 1px 4px rgba(0,0,0,.2);
-    color:#eee;
+    color: #16887D;
 }
 
 form {
